# pasture

./: .gitignore  README.md  accuracy_biomas.py  accuracy_brasil.py  biomas_col5.txt  cliente.py  gerate_list_db.py  pyproject.toml  requirements.txt  settings.toml  start_app.py  start_cliente.py
.old/: 1_Pasture_classification_mapbiomas_COL_5.py  2_Multidimensional_median_filter.py  tiles_natural.in
1_gee_processing/: LANDSAT_COL9_1985_2023_justRun_v2.py  Lapig.py  run_sentinel_2_pasture_Col2_MapBiomas_parseRun.py
2_multidimensional_filter/: 2_Multidimensional_median_filter_parallel.py
ClineteGEE/: cliente.py  functions.py
Landsat/: 1_Pasture_classification_mapbiomas_COL_5.py  2_Multidimensional_median_filter.py
Lapig/: Functions.py
Sentinel/: .dockerignore  pyproject.toml  sentinel.py  settings.toml  teste_rum.py
Sentinel/Sentinel/: start_app.py
Sentinel/Sentinel/ClineteGEE/: __init__.py  cliente.py  functions.py
Sentinel/Sentinel/Lapig/: Functions.py  Lapig.py  sentinel.py
Sentinel/Sentinel/ServeStatus/app/: __init__.py  config.py  model.py  task.py
Sentinel/Sentinel/ServeStatus/app/controller/: __init__.py  config.py  task.py
ServeStatus/: old-app.py
src/: 1.Pasture_classification_mapbiomas_GEE_version.js  1_Pasture_classification_mapbiomas_COL_5.py  1_Pasture_classification_mapbiomas_GEE_version.js  2.Multidimensional_median_filter.py  2_Multidimensional_median_filter.py  3_accuracy_biomas.py  3_calcRaster_Area.py  GetRasterAreas_v4_2_custom_v2_areaCalc.py  accuracy_biomas.py  accuracy_brasil.py  biomas_col5.txt  mapbiomas_filter.py  tiles.in  (+1 more)
(+11 files in other folders)
