[tool.poetry]
name = "Sentinel"
version = "0.1.2"
description = "This repository organizes the pasture mapping codes developed by Laboratório de Processamento de Imagens e Geoprocessamento (LAPIG/UFG). The methology used by LAPIG team is avaliable in the paper of PARENTE et al. (2017)"
authors = ["Vinícius Mesquita, Jairo Matos da Rocha"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
earthengine-api = "^0.1.247"
scipy = "^1.6.0"
dynaconf = "^3.1.2"
flask = "^1.1.2"
geetools = "^0.6.7"
flask_mongoengine = "^1.0.0"
black = "^20.8b1"
loguru = "^0.5.3"
python-dotenv = "^0.15.0"


[tool.poetry.dev-dependencies]
ipython = "^7.19.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
